--- a/templates/profile.html
+++ b/templates/profile.html
@@ -144,18 +144,6 @@
                                 <div class="col-sm-3">
                                     <h6 class="mb-0">Allergen Category</h6>
                                 </div>
-                                <!-- <div class="col-sm-9 text-secondary">
-                                    <select class="form-control" id="category" name="allergy" value="{{ user.allergy }}">
-                                        <option value="">-- Select an option --</option>
-                                        <option value="gluten">Gluten</option>
-                                        <option value="dairy">Dairy</option>
-                                        <option value="nut">Nut</option>
-                                        <option value="soy">Soy</option>
-                                        <option value="meatBased">Meat Based</option>
-                                        <option value="fruitBased">Fruit Based</option>
-                                        <option value="cruciferous">Cruciferous</option>
-                                    </select>
-                                </div> -->
                                 <div class="col-sm-9 text-secondary">
                                     <div class="row">
                                         <div class="col-md-6">
@@ -198,8 +186,26 @@
                                                 </label>
                                             </div>
                                         </div>
+                                        <div class="col-md-6">
+                                            <div class="form-check">
+                                                <input class="form-check-input" type="checkbox" name="allergens" value="Cruciferous" id="checkbox4">
+                                                <label class="form-check-label" for="checkbox4">
+                                                    Cruciferous
+                                                </label>
+                                            </div>
+                                        </div>
                                     </div>
                                 </div>
+                            </div>
+                            <div class="row mb-3">
+                                <div class="col-sm-3">
+                                    <h6 class="mb-0">Other Allergens</h6>
+                                </div>
+                                <div class="col-sm-9 text-secondary">
+                                    <input type="text" class="form-control" min = 0 name="otherAllergen">
+                                </div>
+                            </div>
+
                             <div class="row">
                                 <div class="col-sm-3"></div>
                                 <div class="col-sm-9 text-secondary" style="text-align: center;">
@@ -209,35 +215,6 @@
                         </div>
                     </div>
                 </form>
-                <!-- <div class="row">
-                    <div class="col-sm-12">
-                        <div class="card">
-                            <div class="card-body">
-                                <h5 class="d-flex align-items-center mb-3">Project Status</h5>
-                                <p>Web Design</p>
-                                <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-primary" role="progressbar" style="width: 80%" aria-valuenow="80" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <p>Website Markup</p>
-                                <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-danger" role="progressbar" style="width: 72%" aria-valuenow="72" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <p>One Page</p>
-                                <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-success" role="progressbar" style="width: 89%" aria-valuenow="89" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <p>Mobile Template</p>
-                                <div class="progress mb-3" style="height: 5px">
-                                    <div class="progress-bar bg-warning" role="progressbar" style="width: 55%" aria-valuenow="55" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                                <p>Backend API</p>
-                                <div class="progress" style="height: 5px">
-                                    <div class="progress-bar bg-info" role="progressbar" style="width: 66%" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100"></div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div> -->
             </div>
         </div>
     </div>
