--- a/templates/profile.html
+++ b/templates/profile.html
@@ -75,25 +75,31 @@
     }
 </style>
 <!-- ======= Header ======= -->
-<header id="header" class="fixed-top  header">
+<header id="header" class="fixed-top  header-transparent ">
     <div class="container d-flex align-items-center justify-content-between">
 
-      <div class="logo">
-        <h1><a href="index.html">Allergen Detection System</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-      </div>
+        <div class="logo">
+            <!-- Uncomment below if you prefer to use an image logo -->
+            <a href="index.html"><img src="/static/img/logo.png" alt="" class="img-fluid"></a>
 
-      <nav id="navbar" class="navbar">
-        <ul>
-          <li><a class="nav-link scrollto" href="{{ url_for('index') }}">Home</a></li>
-          <li><a class="nav-link scrollto active" href="{{ url_for('profile') }}">Profile</a></li>
-        </ul>
-        <i class="bi bi-list mobile-nav-toggle"></i>
-      </nav><!-- .navbar -->
+        </div>
+        <div class="logo-text">
+            <!-- Uncomment below if you prefer to use an image logo -->
+            <h1 style="text-align: center;"><a href="{{ url_for('index') }}" style="font-size: 20px;"><span>Allergen Detection</span> <br>System</a></h1>
+
+        </div>
+
+        <nav id="navbar" class="navbar">
+            <ul>
+                <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
+                <li><a class="nav-link scrollto" href="{{ url_for('profile') }}">Profile</a></li>
+                <a href="{{ url_for('logout') }}" class = "logout" style="color: white;">Logout</a>
+            </ul>
+            <i class="bi bi-list mobile-nav-toggle"></i>
+        </nav><!-- .navbar -->
 
     </div>
-  </header><!-- End Header -->
+</header><!-- End Header -->
 
 <div class="container" style="margin-top: 100px;">
     <div class="main-body">
