--- a/templates/index.html
+++ b/templates/index.html
@@ -56,7 +56,7 @@
 
         <div class="logo">
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html"><img src="/static/img/logo.png" alt="" class="img-fluid"></a>
+            <a href="{{ url_for('index') }}"><img src="/static/img/logo.png" alt="" class="img-fluid"></a>
 
         </div>
         <div class="logo-text">
@@ -117,7 +117,7 @@
 
         <div class="logo">
             <!-- Uncomment below if you prefer to use an image logo -->
-            <a href="index.html"><img src="/static/img/logo.png" alt="" class="img-fluid"></a>
+            <a href="{{ url_for('index') }}"><img src="/static/img/logo.png" alt="" class="img-fluid"></a>
 
         </div>
         <div class="logo-text">
